--- a/libs/core/tsconfig.lib.json
+++ b/libs/core/tsconfig.lib.json
@@ -3,10 +3,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
+    "outDir": "../../out-tsc/libs/core",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
+    
+    
     "types": []
   },
   "include": [
@@ -16,3 +18,4 @@
     "**/*.spec.ts"
   ]
 }
+
