--- a/libs/auth/tsconfig.spec.json
+++ b/libs/auth/tsconfig.spec.json
@@ -3,13 +3,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/spec",
+    "outDir": "../../out-tsc/libs/auth-spec",
     "types": [
-      "jasmine"
-    ]
-  },
+      "jasmine" ] },
   "include": [
     "src/**/*.d.ts",
     "src/**/*.spec.ts"
   ]
 }
+
+
