--- a/apps/demo-app/tsconfig.spec.json
+++ b/apps/demo-app/tsconfig.spec.json
@@ -2,13 +2,12 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
-        "types": []
+        "types": [
+            "jasmine"
+        ]
     },
-    "files": [
-        "src/main.ts"
-    ],
     "include": [
-        "src/**/*.ts",
+        "src/**/*.spec.ts",
         "src/**/*.d.ts"
     ]
 }
