--- a/libs/auth/tsconfig.lib.json
+++ b/libs/auth/tsconfig.lib.json
@@ -7,8 +7,12 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    
-    "types": []
+    "types": [],
+    "paths": {
+      "@platform/core": [
+        "dist/core"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
@@ -22,4 +26,3 @@
     }
   ]
 }
-
