--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,6 +67,12 @@
     },
     {
       "path": "./libs/ui-platform/tsconfig.spec.json"
+    },
+    {
+      "path": "./apps/platform-showcase/tsconfig.app.json"
+    },
+    {
+      "path": "./apps/auth-showcase/tsconfig.app.json"
     }
   ]
 }
