form-builder commit

--- a/libs/ui-platform/package.json
+++ b/libs/ui-platform/package.json
@@ -2,8 +2,10 @@
   "name": "@platform/ui-platform",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/core": "^20.3.0"
+    "@angular/common": "^19.1.0",
+    "@angular/core": "^19.1.0",
+    "@angular/cdk": "^19.1.0",
+    "@angular/material": "^19.1.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
