--- a/angular.json
+++ b/angular.json
@@ -352,6 +352,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/platform-showcase",
+            "index": "apps/platform-showcase/src/index.html",
             "browser": "apps/platform-showcase/src/main.ts",
             "polyfills": [
               "zone.js"
@@ -629,6 +631,95 @@
             "styles": [
               "apps/core-showcase/src/styles.css"
             ]
+          }
+        }
+      }
+    },
+    "form-engine-app": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "apps/form-engine-app",
+      "sourceRoot": "apps/form-engine-app/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/form-engine-app",
+            "index": "apps/form-engine-app/src/index.html",
+            "browser": "apps/form-engine-app/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "apps/form-engine-app/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "apps/form-engine-app/public"
+              }
+            ],
+            "styles": [
+              "apps/form-engine-app/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "form-engine-app:build:production"
+            },
+            "development": {
+              "buildTarget": "form-engine-app:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "apps/form-engine-app/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "apps/form-engine-app/public"
+              }
+            ],
+            "styles": [
+              "apps/form-engine-app/src/styles.css"
+            ],
+            "scripts": []
           }
         }
       }
