--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-spinner": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@storybook/angular": "^10.2.8",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
