--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@mediapipe/tasks-vision": "^0.10.32",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
     "ngx-spinner": "^19.0.0",
